name:                language-dart
version:             0.2.0.0
synopsis:            Manipulating Dart source: abstract syntax and pretty-printer
description:         Please see README.md
homepage:            https://github.com/kseo/language-dart#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
copyright:           Kwang Yul Seo 2016
category:            Language
stability:           Experimental
build-type:          Simple
tested-with:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Dart.Grammar
                       Language.Dart.Pretty
                       Language.Dart.Syntax
  other-modules:       Language.Dart.GrammarDeclaration
  build-depends:       base >= 4.7 && < 5
                     , grammatical-parsers >= 0.3.1 && < 0.4
                     , parsers >= 0.12.7 && < 0.13
                     , pretty >= 1.1
                     , rank2classes < 1.2
  default-language:    Haskell2010

executable parse
  main-is:             app/Parse.hs
  -- other-modules:       
  other-extensions:    RankNTypes, RecordWildCards, ScopedTypeVariables, FlexibleInstances, DeriveDataTypeable
  build-depends:       base >= 4.7 && < 5, containers >= 0.5 && < 1.0,
                       repr-tree-syb < 0.2, filepath < 1.5, pretty >= 1,
                       rank2classes < 1.2, grammatical-parsers >= 0.3.1 && < 0.4, language-dart,
                       optparse-applicative
  default-language:    Haskell2010

test-suite language-dart-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PrettySpec
                       TestHelper
  build-depends:       base
                     , hspec
                     , language-dart
                     , raw-strings-qq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/language-dart
